이미지 줌앤아웃안되는거 수정 및 댓글쓰기칸 조절

--- a/YouthCommunity/app/src/main/res/layout/activity_full_sns.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_full_sns.xml
@@ -230,6 +230,7 @@
                 android:hint="댓글입력(#닉네임 입력시 답글알림가능)"
                 android:maxLength="255"
                 android:autoLink="all"
+                android:textSize="12dp"
                 android:maxLines="10"
                 android:padding="5dp" />
 
