--- a/YouthCommunity/app/src/main/res/layout/activity_full_board.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_full_board.xml
@@ -156,6 +156,7 @@
                 android:layout_margin="2dp"
                 android:layout_weight="7"
                 android:background="@drawable/message_input"
+                android:textSize="12dp"
                 android:hint="댓글입력(#닉네임 입력시 답글알림가능)"
                 android:autoLink="all"
                 android:maxLength="255"
