--- a/YouthCommunity/app/src/main/res/layout/activity_add_friend_dialog.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_add_friend_dialog.xml
@@ -13,7 +13,6 @@
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:layout_height="wrap_content">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,11 +21,11 @@
 
         <EditText
             android:id="@+id/dialog_pt_nickname"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:background="@drawable/login_input"
-            android:hint="친구추가할 닉네임을 입력해주세요"
+            android:hint="친구 닉네임 입력"
             android:inputType="text"
             android:padding="10dp" />
     </LinearLayout>
