--- a/YouthCommunity/app/src/main/res/layout/activity_add_friend_dialog.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_add_friend_dialog.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:background="@drawable/login_input"
+            android:background="@drawable/text_input"
             android:hint="친구 닉네임 입력"
             android:inputType="text"
             android:padding="10dp" />
