--- a/YouthCommunity/app/src/main/res/layout/activity_friend_profile.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_friend_profile.xml
@@ -25,7 +25,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="50dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/login_input"
+        android:background="@drawable/text_input"
         android:padding="10dp"
         android:textSize="20dp" />
 
@@ -36,7 +36,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/login_input"
+        android:background="@drawable/text_input"
         android:lines="4"
         android:autoLink="all"
         android:maxLength="100"
@@ -51,7 +51,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/login_input"
+        android:background="@drawable/text_input"
         android:padding="10dp"
         android:textSize="20dp" />
 
