--- a/YouthCommunity/app/src/main/res/layout/activity_full_board.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_full_board.xml
@@ -142,7 +142,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:background="@drawable/login_input"
+            android:background="@drawable/text_input"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:orientation="horizontal"
