--- a/YouthCommunity/app/src/main/res/layout/activity_full_sns.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_full_sns.xml
@@ -214,7 +214,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/login_input"
+            android:background="@drawable/text_input"
             android:orientation="horizontal"
             android:focusable="true"
             android:focusableInTouchMode="true"
