--- a/YouthCommunity/app/src/main/res/layout/activity_profile.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_profile.xml
@@ -38,7 +38,7 @@
         android:inputType="text"
         android:maxLength="10"
         android:maxLines="1"
-        android:background="@drawable/login_input"
+        android:background="@drawable/text_input"
         android:hint="닉네임"
         android:padding="10dp"
         android:textSize="20dp" />
@@ -50,7 +50,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
-        android:background="@drawable/login_input"
+        android:background="@drawable/text_input"
         android:hint="자기소개(100자 이내)"
         android:lines="4"
         android:autoLink="all"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/login_input"
+        android:background="@drawable/text_input"
         android:autofillHints="나이를 선택해주세요"
         android:layout_marginRight="30dp" />
     <Button
