--- a/YouthCommunity/app/src/main/res/layout/activity_sign_up.xml
+++ b/YouthCommunity/app/src/main/res/layout/activity_sign_up.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#FFFFFFFF"
     android:layout_height="match_parent"
+    android:background="#FFFFFFFF"
     android:orientation="vertical"
     tools:context=".activity.activities.SignUpActivity">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="8dp"
-        android:src="@drawable/ic_app_title"/>
+        android:src="@drawable/ic_app_title" />
 
     <TextView
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="30dp"
-     android:gravity="center"
+        android:gravity="center"
         android:text="회원가입"
         android:textSize="30dp" />
 
@@ -35,9 +35,13 @@
         android:layout_marginTop="50dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/login_input"
+        android:drawableStart="@drawable/ic_email_black_24dp"
+        android:drawableLeft="@drawable/ic_email_black_24dp"
         android:hint="이메일"
         android:inputType="text"
         android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:textSize="20dp" />
 
     <EditText
@@ -48,10 +52,14 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/login_input"
+        android:drawableStart="@drawable/ic_https_black_24dp"
+        android:drawableLeft="@drawable/ic_https_black_24dp"
         android:hint="비밀번호"
-        android:maxLength="20"
         android:inputType="textPassword"
+        android:maxLength="20"
         android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:textSize="20dp" />
 
     <EditText
@@ -62,33 +70,39 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/login_input"
+        android:drawableStart="@drawable/ic_https_black_24dp"
+        android:drawableLeft="@drawable/ic_https_black_24dp"
         android:hint="비밀번호 확인"
-        android:maxLength="20"
         android:inputType="textPassword"
+        android:maxLength="20"
         android:padding="10dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:textSize="20dp" />
 
     <Button
-        android:layout_marginTop="50dp"
         android:id="@+id/signup_btn_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/textBlue"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginRight="30dp"
+        android:background="@color/textBlue"
         android:text="회원가입"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
     <Button
-        android:layout_marginTop="30dp"
         android:id="@+id/signup_btn_cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/textBlue"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
+        android:background="@color/textBlue"
         android:text="취소"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
